# dgpp

./: .gitignore  AGENTS.md  LTAC_DATA_REPORT.md  MONITOR_INFRASTRUCTURE.md  README.md  pyproject.toml  sqlite_vps_migration_plan.md
.claude/: settings.local.json
deploy/: README.md  metar-monitor.service  setup.sh
src/metar_monitor/: __main__.py  alert.py  app.py  client.py  config.py  db.py  detector.py  event_hub.py  import_json.py  models.py  monitor.py  runtime.py  schedule.py  state.py  temp_tracker.py  widgets.py
src/metar_monitor.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/metar_monitor/web/: server.py
src/metar_monitor/web/static/: index.html
tests/: test_db.py  test_detector.py  test_event_hub.py  test_import_json.py  test_monitor_neighbors.py  test_runtime.py  test_schedule.py  test_state.py  test_temp_tracker.py  test_web.py
tests/fixtures/: mgm_responses.py
