[project]
name = "metar-monitor"
version = "0.1.0"
description = "Ultra-low-latency LTAC METAR monitor"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28",
    "textual>=1.0",
    "tzdata>=2024.1;sys_platform=='win32'",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio"]

[project.scripts]
metar-monitor = "metar_monitor.__main__:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"metar_monitor.web" = ["static/*.html", "static/*.js"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
